--- a/about.qmd
+++ b/about.qmd
@@ -2,8 +2,39 @@
 title: "About"
 ---
 
-About this site
+# dsa-colloquium
+
+Tech demo for DSA-201
+
+## Here's a level 2 section!
+
+And then there's some text below.
+
+### This is a thing I did on my local machine.
 
 ```{r}
-1 + 1
+library(readr)
+library(dplyr)
+library(ggplot2)
+
+i94_metro_interstate_traffic <- read_csv("C:/Users/Admin/Downloads/i94_metro_interstate_traffic.csv")
+
 ```
+## Hour of day
+```{r}
+traffic_volume_avgs <- i94_metro_interstate_traffic %>% 
+    group_by(dt_hour) %>%
+    summarize(
+        avg = mean(traffic_volume)
+        )
+traffic_volume_avgs %>%
+   ggplot(aes(x = dt_hour, y = avg)) +
+   geom_line() +
+   labs(
+     title = "Average Traffic Volume at Different Hours",
+     x = "Hour of Day",
+     y = "Average Traffic Volume"
+)
+```
+
+
